app/src/frontend/assets/css/flow_diagram.css
.flow-diagram-page {
  display: flex;
  align-items: center;
  width: 100%;
  height: 78vh;
  gap: 20px;
}

.flow-diagram-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  padding: 20px;
  background-color: white;
  height: 100%;
  width: 67%;
  border-radius: 6px;
  border: 1px solid var(--border-color);
  overflow: auto;
}

.flow-diagram-container svg {
  height: 100%;
  width: 100%;
}

.settings-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%;
  width: 33%;
}

.settings {
  display: flex;
  flex-direction: column;
  border-radius: 6px;
  background: linear-gradient(0deg, var(--background-color-2) 0%, var(--background-color-3) 100%);
  border: 1px solid var(--border-color);
  box-shadow: var(--box-shadow);
  width: 100%;
  overflow: auto;
}

.settings-title {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  padding: 10px 0;
  color: var(--input-text-color);
  text-align: center;
  background: inherit;
  border-bottom: 1px solid var(--border-color);
  border-radius: 6px 6px 0 0;
}

.settings-form-heading {
  font-size: 1.1rem;
  color: var(--input-text-color);
  width: 100%;
  margin-top: 5px;
}

.settings-form {
  display: flex;
  flex-direction: column;
  padding: 15px 20px 20px 20px;
  width: 100%;
  overflow-y: auto;
}

.settings-form-group {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.settings-form-database-group,
.settings-form-reason-group {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

.settings-form,
.settings-form input,
.settings-form select {
  font-size: .85rem;
}

.settings-form input::placeholder {
  color: var(--input-text-color);
}

.settings-form input,
.settings-form select {
  margin: 6px 0;
  padding: 5px;
  border-radius: 6px;
  color: var(--text-color-1);
  background: var(--input-background-color);
  border: 1px solid var(--border-color);
}

.settings-form input:hover,
.settings-form select:hover {
  border-color: var(--border-color-hover);
}

.settings-form input:focus,
.settings-form select:focus {
  border-color: var(--border-color-focus);
  box-shadow: var(--border-box-shadow);
}

.settings-form input[type="color"] {
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 50%;
}

.settings-form input[type="color"]::-webkit-color-swatch {
  border: none;
  padding: 8px;
}

.settings-form input[type="color"]::-moz-color-swatch {
  border: none;
  padding: 8px;
}

.settings-actions-buttons {
  justify-content: flex-end;
  display: flex;
  flex-direction: row;
  width: 100%;
  margin-top: 15px;
}

.settings-actions-button {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 24px;
  min-width: 24px;
  padding: 4px;
  margin: 0 1.5px;
}

.settings-actions-button-icon {
  fill: var(--text-color-1);
  width: 16px;
  height: 16px;
  margin-right: 5px;
}

.download-modal-background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 999;
}

.download-modal {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  padding: 20px;
  border-radius: 6px;
  border: 1px solid var(--border-color);
  box-shadow: var(--box-shadow);
  max-width: 350px;
  width: 350px;
  max-height: 250px;
  height: 250px;
  text-align: center;
  background: linear-gradient(0deg, var(--background-color-2) 0%, var(--background-color-3) 100%);
  z-index: 1000;
  position: relative;
}

.download-modal h2 {
  margin-bottom: 20px;
  font-size: 1.5rem;
  font-weight: normal;
}

.download-modal label {
  display: block;
  margin-bottom: 10px;
  font-size: 1rem;
}

.download-modal select {
  width: 100%;
  padding: 8px;
  margin-bottom: 20px;
  border-radius: 6px;
  color: var(--text-color-1);
  background-color: var(--background-color-1);
  border: 1px solid var(--border-color);
  box-sizing: border-box;
  font-size: 1rem;
}

.download-modal select:hover {
  border-color: var(--border-color-hover);
}

.download-modal select:focus {
  border-color: var(--border-color-focus);
  box-shadow: var(--border-box-shadow);
}

.download-modal-button {
  width: 50%;
  font-size: 1rem;
}

.close-icon {
  display: flex;
  cursor: pointer;
  border-radius: 50%;
  position: absolute;
  fill: var(--text-color-1);
  width: 18px;
  height: 18px;
  top: 10px;
  right: 10px;
  transition: transform 0.2s;
}

.close-icon:hover {
  fill: var(--error-color);
}

.close-icon:active {
  fill: var(--text-color-1);
}

